<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smartisan Notes</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title">Notes</string>
    <string name="list">List</string>
    <string name="div">-</string>
    <string name="send_via">Send via</string>
    <string name="input_content">Please input content!</string>
    <string name="search">Quick search</string>
    <string name="notes_empty">No content</string>
    <string name="modify">Edit</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="minute">minute</string>
    <string name="ago">%1$d %2$s ago</string>
    <string name="delete_note">Delete this note</string>
    <string name="title_bar_cancel">Cancel</string>
    <string name="title_bar_save_send">Next</string>
    <string name="title_bar_finish">Done</string>
    <string name="delete_note_confirm">Delete</string>
    <string name="share_dialog_send_method">Please select send method</string>
    <string name="share_dialog_send_via_sms">Send via sms</string>
    <string name="share_dialog_send_via_email">Send via email</string>
    <string name="share_dialog_copy_text">Copy text</string>
    <string name="share_dialog_send_via_weibo">Send via Weibo</string>
    <string name="share_dialog_send_via_long_length_weibo">Send as picture</string>
    <string name="share_dialog_cancel">Cancel</string>
    <string name="delete_dialog_confirm">Are you sure to delete this note?</string>
    <string name="toast_text_copied">Text copied.</string>
    <string name="toast_weibo_not_found">Sina Weibo not installed.</string>
    <string name="email_select_app_title">Select an Email client</string>
    <string name="weibo_length_too_long_msg">Over text limit, send as picture?</string>
    <string name="long_length_weibo_power_by">Powered by Hammer mobile.</string>
    <string name="long_length_weibo_stored_in_gallery">Picture saved in gallery</string>
    <string name="long_length_weibo_store_error">Storage error</string>
    <string name="first_start_tip1">Tap top right button to write a note.</string>
    <string name="first_start_tip2">Swipe right to delete a note.</string>
    <string name="first_start_tip3">Hold and drag to change order.</string>
    <string name="first_start_tip4">"Tap here to see what's up inside ^_^ 

You can post your notes to Sina Weibo, with no 140-character limit. If your single note ever reached 140-character count, it will automatically turn into a long length Weibo picture with elegant typesetting and beautiful typeface. We hope your words will not in pieces with our note app. Just try tap the little plane button to send this note via Sina Weibo."</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="future">Future</string>
    <string name="call_info">%1$s Call with %2$s</string>
    <string name="share_toast_success_text">Successfully Authorized！</string>
    <string name="toast_failed_text">Authorize failed！</string>
    <string name="toast_net_error">Connection timeout</string>
    <string name="share">Share</string>
    <string name="sinaweibo_send">Send</string>
    <string name="sinaweibo_share_dialog_title">Sina Weibo</string>
    <string name="first_lonin_sinaweibo_notice">Log in using Sina Weibo account to share weibo.</string>
    <string name="sinaweibo_share_edit_text_hint">What’s new with you......</string>
    <string name="sinaweibo_share_text_limit_exceeded">Word count exceeded</string>
    <string name="sinaweibo_account_add">Add</string>
    <string name="sinaweibo_account_manager">Account management</string>
    <string name="sinaweibo_delete_account_dialog_confirm">Log out this account?</string>
    <string name="sinaweibo_account_empty">No Sina Weibo account</string>
    <string name="sinaweibo_shareing">Sending weibo</string>
    <string name="sinaweibo_share_success">Sent</string>
    <string name="sinaweibo_share_failed">Sending failed</string>
    <string name="sinaweibo_share_default_text">Share image</string>
    <string name="sinaweibo_setting_bind">Bind Sina Weibo account</string>
    <string name="sinaweibo_setting_bindwithaccount">Account binded</string>
    <string name="sinaweibo_setting_unbind">Unbind</string>
    <string name="sinaweibo_defalut_name">Account name</string>
    <string name="delete">Delete</string>
    <string name="null_note_title">Notes is empty</string>
    <string name="null_note_summary">Tap the top right hand corner to write a note</string>
    <string name="error_title">Can not generate a picture</string>
    <string name="error_message">This note contains too many characters to generate a picture.</string>
    <string name="facebook">Facebook</string>
    <string name="weibo">Weibo</string>
    <string name="we_chat">WeChat</string>
    <string name="twitter">Twitter</string>
    <string name="qzone">Qzone</string>
    <string name="we_chat_timeline">Moments</string>
    <string name="support_email">support@smartisan.cn</string>
    <string name="smartisan">www.smartisan.cn</string>
    <string name="copyrights">Copyrights 2013, Smartisan Tech (Beijing) Co., Ltd. All Rights Reserved.</string>
    <string name="share_msg">Just installed Smartisan Notes V1.2 for Android, download link:http://bbs.smartisan.cn/forum.php?mod=viewthread&amp;tid=25028&amp;extra=page%3D1</string>
    <string name="update">Update</string>
    <string name="check_update">Check update</string>
    <string name="check_update_message">Detected a new version of the smartisan notes (version %s),click to upgrade.</string>
    <string name="update_download">Download</string>
    <string name="update_cancel">Cancel</string>
    <string name="dialog_title_cancel">Cancel</string>
    <string name="dialog_send_message">Send message</string>
    <string name="dialog_add_contact">Add to contacts</string>
    <string name="dialog_send_mail">Send e-mail</string>
    <string name="dialog_add_mail_contact">Add e-maill address to contacts</string>
    <string name="dialog_call">Call</string>
</resources>
